fragment init and fragment controller complete

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_bgd"
+    android:background="@color/palette_1"
     tools:context=".activity.SplashActivity">
 
     <ImageView
