--- a/app/src/main/res/menu/navbar.xml
+++ b/app/src/main/res/menu/navbar.xml
@@ -2,19 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/nowPlayingFragmentIcon"
+        android:id="@+id/nowPlayingFragment"
         android:icon="@drawable/ic_now_playing"
         android:title="@string/now_playing" />
     <item
-        android:id="@+id/trendingFragmentIcon"
+        android:id="@+id/trendingFragment"
         android:icon="@drawable/ic_trending"
         android:title="@string/trending" />
     <item
-        android:id="@+id/searchFragmentIcon"
+        android:id="@+id/searchFragment"
         android:icon="@drawable/ic_search"
         android:title="@string/search" />
     <item
-        android:id="@+id/bookmarkFragmentIcon"
+        android:id="@+id/bookmarkFragment"
         android:icon="@drawable/ic_bookmark"
         android:title="@string/bookmarks" />
 
