create custom view for movie grid

--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -10,4 +10,8 @@
         android:layout_height="match_parent"
         android:text="@string/now_playing" />
 
+    <com.chiragjn.movieman.ui.MovieView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </FrameLayout>
