grid initialized with views

--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -6,7 +6,7 @@
     android:background="@color/palette_1"
     tools:context=".fragment.NowPlayingFragment">
 
-    <GridView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/moviesGrid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
