--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    xmlns:fresco="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/movieBgd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/palette_2"
         android:contentDescription="@string/movie_desc"
         android:scaleType="centerInside"
-        android:src="@drawable/logo_movieman"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="3:2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        fresco:fadeDuration="200"
+        fresco:placeholderImage="@drawable/logo_movieman"
+        fresco:viewAspectRatio="0.67" />
 
     <ImageButton
         android:id="@+id/movieBookmark"
@@ -26,20 +28,20 @@
         android:contentDescription="@string/bookmark_desc"
         android:src="@drawable/ic_bookmark_btn"
         app:layout_constraintBottom_toBottomOf="@+id/movieBgd"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="@id/movieBgd" />
 
     <TextView
         android:id="@+id/movieRating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/rating_desc"
-        android:text="@string/default_rating"
-        android:textSize="@dimen/movie_grid_rating_size"
-        android:textColor="@color/palette_5"
         android:paddingStart="@dimen/movie_grid_rating_pad"
         android:paddingEnd="@dimen/movie_grid_rating_pad"
+        android:text="@string/default_rating"
+        android:textColor="@color/palette_5"
+        android:textSize="@dimen/movie_grid_rating_size"
         app:layout_constraintBottom_toBottomOf="@+id/movieBookmark"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/movieBgd"
         app:layout_constraintTop_toTopOf="@+id/movieBookmark" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
