--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -3,22 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fresco="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/movieBgd"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="120dp"
+        android:layout_height="180dp"
         android:background="@color/palette_2"
         android:contentDescription="@string/movie_desc"
-        android:scaleType="centerInside"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        fresco:fadeDuration="200"
+        fresco:actualImageScaleType="centerCrop"
+        fresco:fadeDuration="100"
         fresco:placeholderImage="@drawable/logo_movieman"
         fresco:viewAspectRatio="0.67" />
+
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="180dp"
+        android:src="@drawable/ic_gradient"
+        android:contentDescription="@string/movie_desc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/movieBookmark"
@@ -38,7 +50,7 @@
         android:paddingStart="@dimen/movie_grid_rating_pad"
         android:paddingEnd="@dimen/movie_grid_rating_pad"
         android:text="@string/default_rating"
-        android:textColor="@color/palette_5"
+        android:textColor="@color/white"
         android:textSize="@dimen/movie_grid_rating_size"
         app:layout_constraintBottom_toBottomOf="@+id/movieBookmark"
         app:layout_constraintStart_toStartOf="@id/movieBgd"
