populate movie view

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,9 @@
 
     <dimen name="movie_grid_rating_size">18sp</dimen>
     <dimen name="movie_grid_rating_pad">4dp</dimen>
+
+<!--    Movie View-->
+    <dimen name="margin_16dp">16dp</dimen>
+    <dimen name="text_18sp">18sp</dimen>
+    <dimen name="text_16sp">16sp</dimen>
 </resources>
