--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,10 +10,10 @@
 
 <!--    Palette-->
     <color name="palette_1">#F5E3E0</color>
-    <color name="palette_2">#E8B4BC</color>
-    <color name="palette_3">#D282A6</color>
-    <color name="palette_4">#6E4555</color>
-    <color name="palette_5">#3A3238</color>
+    <color name="palette_2">#610094</color>
+    <color name="palette_3">#3F0071</color>
+    <color name="palette_4">#150050</color>
+    <color name="palette_5">#000000</color>
 
     <color name="bookmark">#FF0000</color>
 
