--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/palette_5"
     android:layout_height="match_parent"
-    xmlns:fresco="http://schemas.android.com/tools"
+    android:background="@color/palette_5"
+    android:scrollbars="none"
     tools:context=".activity.MovieActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,7 +24,7 @@
             fresco:actualImageScaleType="centerCrop"
             fresco:fadeDuration="100"
             fresco:placeholderImage="@drawable/logo_movieman"
-            fresco:viewAspectRatio="0.67"/>
+            fresco:viewAspectRatio="0.67" />
 
         <ImageButton
             android:id="@+id/buttonBack"
@@ -32,43 +32,67 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_16dp"
             android:background="?selectableItemBackground"
-            android:src="@drawable/ic_arrow_left"
             android:contentDescription="@string/movie_back"
+            android:src="@drawable/ic_arrow_left"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/white" />
 
         <ImageButton
             android:id="@+id/share"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_share"
-            android:contentDescription="@string/movie_share"
             android:layout_margin="@dimen/margin_16dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/movie_share"
+            android:src="@drawable/ic_share"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/white" />
 
-        <TextView
-            android:id="@+id/name"
-            android:textSize="@dimen/text_18sp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/nameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/margin_16dp"
-            android:textColor="@color/palette_1"
-            app:layout_constraintTop_toBottomOf="@id/imagePoster"
-            tools:text="@string/movie_name" />
+            app:layout_constraintTop_toBottomOf="@id/imagePoster">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/margin_16dp"
+                android:textColor="@color/palette_1"
+                android:textSize="@dimen/text_18sp"
+                app:layout_constraintEnd_toStartOf="@id/bookmark"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/movie_name" />
+
+            <ImageButton
+                android:id="@+id/bookmark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_16dp"
+                android:contentDescription="@string/movie_share"
+                android:src="@drawable/ic_bookmark_btn"
+                android:background="@drawable/ic_bookmark_btn_bg"
+                app:layout_constraintBottom_toBottomOf="@id/name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/name"
+                app:layout_constraintTop_toTopOf="@id/name"
+                app:tint="@color/white" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/summary"
-            android:textColor="@color/palette_1"
-            android:textSize="@dimen/text_16sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/margin_16dp"
-            app:layout_constraintTop_toBottomOf="@id/name"
+            android:textColor="@color/palette_1"
+            android:textSize="@dimen/text_16sp"
+            app:layout_constraintTop_toBottomOf="@id/nameLayout"
             tools:text="@string/movie_description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
