--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,8 @@
     <dimen name="movie_grid_rating_size">18sp</dimen>
     <dimen name="movie_grid_rating_pad">4dp</dimen>
 
+    <dimen name="movie_grid_pad">6dp</dimen>
+
 <!--    Movie View-->
     <dimen name="margin_16dp">16dp</dimen>
     <dimen name="text_18sp">18sp</dimen>
