--- a/app/src/main/res/layout/activity_movie_collection.xml
+++ b/app/src/main/res/layout/activity_movie_collection.xml
@@ -8,13 +8,20 @@
     android:background="@color/palette_5"
     tools:context=".activity.MovieCollectionActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/moviesGrid"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/moviesGrid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <ImageButton
         android:id="@+id/buttonBack"
