--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -4,8 +4,8 @@
     xmlns:fresco="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/movie_grid_pad"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:padding="@dimen/movie_grid_pad">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/movieBgd"
@@ -26,8 +26,8 @@
     <ImageView
         android:layout_width="120dp"
         android:layout_height="180dp"
-        android:src="@drawable/ic_gradient"
         android:contentDescription="@string/movie_desc"
+        android:src="@drawable/ic_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +40,7 @@
         android:background="@drawable/ic_bookmark_btn_bg"
         android:contentDescription="@string/bookmark_desc"
         android:src="@drawable/ic_bookmark_btn"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/movieBgd"
         app:layout_constraintEnd_toEndOf="@id/movieBgd" />
 
