--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="palette_5">#333290</color>
 
     <color name="bookmark">#FF0000</color>
+    <color name="hint_color">#1C1C1C</color>
 
 </resources>
