--- a/app/src/main/res/layout/movie_search_item.xml
+++ b/app/src/main/res/layout/movie_search_item.xml
@@ -71,13 +71,11 @@
         app:layout_constraintStart_toEndOf="@id/space2"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/star_image"
+            style="@style/StarImage"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/star"
-            android:src="@drawable/ic_star_fill"
-            app:tint="@color/bookmark" />
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/movieRating"
