add adult rating to movie

--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -41,10 +41,10 @@
                     android:id="@+id/name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semi_bold"
                     android:padding="@dimen/margin_16dp"
                     android:textColor="@color/palette_5"
                     android:textSize="@dimen/text_18sp"
-                    android:fontFamily="@font/poppins_semi_bold"
                     app:layout_constraintEnd_toStartOf="@id/bookmark"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -68,15 +68,18 @@
 
             <LinearLayout
                 android:id="@+id/star_layout"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:paddingTop="@dimen/pad_4dp"
-                android:paddingBottom="@dimen/pad_4dp"
-                android:paddingStart="@dimen/pad_8dp"
-                android:paddingEnd="@dimen/pad_8dp"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@id/nameLayout">
+                android:paddingStart="@dimen/pad_8dp"
+                android:paddingTop="@dimen/pad_4dp"
+                android:paddingEnd="@dimen/pad_8dp"
+                android:paddingBottom="@dimen/pad_4dp"
+                app:layout_constraintEnd_toStartOf="@id/plus18Text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/nameLayout"
+                app:layout_constraintBottom_toBottomOf="@id/plus18Text">
 
                 <ImageButton
                     android:id="@+id/star_image1"
@@ -113,23 +116,38 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/poppins_light"
-                    android:text="@string/default_rating"
-                    android:textColor="@color/palette_4"
                     android:gravity="center_vertical"
                     android:paddingStart="@dimen/pad_4dp"
                     android:paddingEnd="0dp"
-                    android:textSize="@dimen/text_16sp"/>
+                    android:text="@string/default_rating"
+                    android:textColor="@color/palette_4"
+                    android:textSize="@dimen/text_16sp" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/plus18Text"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/poppins_semi_bold"
+                android:paddingStart="@dimen/pad_8dp"
+                android:paddingTop="@dimen/pad_2dp"
+                android:paddingEnd="@dimen/margin_16dp"
+                android:paddingBottom="@dimen/pad_2dp"
+                android:text="@string/plus18"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/nameLayout" />
 
             <TextView
                 android:id="@+id/summary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_light"
                 android:padding="@dimen/margin_16dp"
                 android:textColor="@color/palette_4"
                 android:textSize="@dimen/text_16sp"
-                android:fontFamily="@font/poppins_light"
                 app:layout_constraintTop_toBottomOf="@id/star_layout"
                 tools:text="@string/movie_description" />
 
